@@ -6600,4 +6600,5 @@ PACKAGE: 2.2.99.2
     #3133
  * Added missing EPrints_Dir_SecuredCGI and EPrints_Dir_Documents variables,
     fixing #2973
+ * Quote names in emails if they contain a comma, fixing #3112
 
